made double click optional

--- a/options.html
+++ b/options.html
@@ -4,7 +4,7 @@
     <body>
 
         <div>
-            <h4>Choose any or all</h4>
+            <h4>Choose any or all and click SAVE</h4>
             <div>
                 <label>Choose Background Color: </label>
                 <input id="bg-color" type="color" value="#2f4f4f" />
@@ -29,17 +29,16 @@
                 <label>Choose Close Button Background Color: </label>
                 <input id="close-bg-color" type="color" value="#166888" />
             </div>        
+            <div>
+                <label>
+                    Enable Double Click : 
+                    <input type="checkbox" id="enable-db-click">
+                </label>
+            </div>
             <button id="save-each-color">Save</button>
         </div>
         <h4> ( or )</h4>
         <button id="save-color-scheme">Use Default Color Scheme</button>
-
-        <div>
-            <label>
-                Enable Double Click : 
-                <input type="checkbox" id="enable-db-click">
-            </label>
-        </div>
 
         <div id="status"></div>
 
