styled options.html

--- a/Wiki_Viewer.html
+++ b/Wiki_Viewer.html
@@ -24,7 +24,7 @@
   </div>
 
   <div id="results"></div>
-  <a id="options-page" href="./options.html">Options</a>
+  <a id="options-page" href="./options.html" title="Options"><span>&#9776;<span></a>
 
   <script src="jquery.min.js"></script>  
   <script type="text/javascript" src="Wiki_Viewer.js"></script>
