--- a/options.html
+++ b/options.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
+
 <html>
-    <head><title>QWiki Options</title></head>
+
+    <head lang="en">
+        <meta charset="utf-8">
+        <title>QWiki Options</title>
+        <link rel="stylesheet" type="text/css" href="options.css">
+    </head>
+
     <body>
 
-        <div>
+        <div id="custom-set">
             <h4>Choose any or all and click SAVE</h4>
             <div>
                 <label>Choose Background Color: </label>
@@ -37,7 +44,7 @@
             </div>
             <button id="save-each-color">Save</button>
         </div>
-        <h4> ( or )</h4>
+        <h4 id="or"> ( or )</h4>
         <button id="save-color-scheme">Use Default Color Scheme</button>
 
         <div id="status"></div>
